Fix documentation search results hidden behind page elements

--- a/src/assets/fabricator/styles/partials/_awesomplete.scss
+++ b/src/assets/fabricator/styles/partials/_awesomplete.scss
@@ -42,7 +42,7 @@ div.awesomplete {
 
     position: absolute;
     left: 0;
-    z-index: 1;
+    z-index: 3;
     list-style: none;
 
     text-shadow: none;
